Fix overflow

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -38,7 +38,7 @@ html,
 body,
 #root {
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
